<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.tresamigos</groupId>
  <artifactId>smv</artifactId>
  <version>2.1-SNAPSHOT</version>
  <name>Spark Modularized View</name>
  <packaging>jar</packaging>
  <inceptionYear>2014</inceptionYear>
  <properties>
    <scala.version>2.11.8</scala.version>
    <scala.binary.version>2.11</scala.binary.version>
    <scala.compat.version>${scala.binary.version}</scala.compat.version>
    <spark.version>2.1.0</spark.version>
    <jetty.version>8.1.18.v20150929</jetty.version>
    <commons.httpclient.version>4.3.2</commons.httpclient.version>

    <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>scala-tools.org</id>
      <name>Scala-Tools Maven2 Repository</name>
      <url>https://oss.sonatype.org/content/groups/scala-tools</url>
    </repository>

    <repository>
      <id>Akka repository</id>
      <url>http://repo.akka.io/releases</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>scala-tools.org</id>
      <name>Scala-Tools Maven2 Repository</name>
      <url>https://oss.sonatype.org/content/groups/scala-tools</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency> <!-- Spark dependency -->
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_${scala.binary.version}</artifactId>
      <version>${spark.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency> <!-- Spark dependency -->
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-hive_${scala.binary.version}</artifactId>
      <version>${spark.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${commons.httpclient.version}</version>
    </dependency>
    <dependency> <!-- Jetty Server dependency -->
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>${jetty.version}</version>
      <!--<scope>provided</scope>-->
    </dependency>
    <dependency> <!-- Jetty Http Client dependency -->
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-client</artifactId>
      <version>${jetty.version}</version>
      <!--<scope>provided</scope>-->
    </dependency>
    <dependency>
      <groupId>org.scalatest</groupId>
      <artifactId>scalatest_${scala.binary.version}</artifactId>
      <version>2.2.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>14.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.rogach</groupId>
      <artifactId>scallop_${scala.binary.version}</artifactId>
      <version>0.9.5</version>
    </dependency>
    <dependency>
      <groupId>org.joda</groupId>
      <artifactId>joda-convert</artifactId>
      <version>1.7</version>
    </dependency>
    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency> <!-- for string matching -->
      <groupId>com.rockymadden.stringmetric</groupId>
      <artifactId>stringmetric-core_${scala.binary.version}</artifactId>
      <version>0.27.4</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.0.2</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <configuration>
          <recompileMode>incremental</recompileMode>
        </configuration>
        <executions>
          <execution>
            <id>scala-compile-first</id>
            <phase>process-resources</phase>
            <goals>
              <goal>add-source</goal>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>scala-test-compile</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <compilerArgument></compilerArgument>
        </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- disable surefire -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.7</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>

      <!-- enable scalatest -->
      <plugin>
        <groupId>org.scalatest</groupId>
        <artifactId>scalatest-maven-plugin</artifactId>
        <version>1.0</version>
        <configuration>
          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
          <junitxml>.</junitxml>
          <filereports>WDF TestSuite.txt</filereports>
          <!-- since akka remoting keep staring for each suite, need a larger memory here -->
          <argLine>-XX:MaxPermSize=256m</argLine>
        </configuration>
        <executions>
          <execution>
            <id>test</id>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

        <!-- plugin to execute the following:
                * run install-smvR.sh to install the SMV R package.
                * gen_docs.sh script to generate the user guide (during site phase)
        -->
        <plugin>
            <artifactId>exec-maven-plugin</artifactId>
            <groupId>org.codehaus.mojo</groupId>
            <version>1.4.0</version>
            <executions>
                <execution>
                    <id>install SMV R package</id>
                    <phase>compile</phase>
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>./R/install-smvR.sh</executable>
                    </configuration>
                </execution>
                <execution>
                    <id>gen-user-guide</id>
                    <phase>site</phase>
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>./tools/gen_docs.py</executable>
                        <arguments>
                            <argument>./docs/user/0_user_toc.md</argument>
                            <argument>./target/site/user</argument>
                        </arguments>
                    </configuration>
                </execution>
            </executions>
        </plugin>

        <!-- disable standard maven site plugin from trying to deploy (we are using github plugin instead) -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-site-plugin</artifactId>
            <version>3.3</version>
            <dependencies>
                <dependency>
                    <!--
                    | allows markdown syntax for site generation. To use it place files below
                    | src/site/markdown/[filename].md
                    -->
                    <groupId>org.apache.maven.doxia</groupId>
                    <artifactId>doxia-module-markdown</artifactId>
                    <version>1.3</version>
                </dependency>
            </dependencies>
            <configuration>
                <skipDeploy>true</skipDeploy>
            </configuration>
        </plugin>

        <!-- github site publishing plugin. -->
        <!-- In order to use github plugin to publish to github pages.  Must do the following:
             1. ensure that you have a description in your github profile (yes, that is required else you get a null error)
             2. setup the "github" server entry in your ~/.m2/settings.xml file:
                <servers>
                    <server>
                        <id>github</id>
                        <password>OA_AUTH_PASSWORD_FROM_GITHUB</password>
                    </server>
                </servers>
        -->
        <plugin>
            <groupId>com.github.github</groupId>
            <artifactId>site-maven-plugin</artifactId>
            <version>0.12</version>
            <configuration>
                <message>Creating site for ${project.version}</message>
                <repositoryName>SMV</repositoryName>
                <repositoryOwner>TresAmigosSD</repositoryOwner>
                <merge>false</merge>
                <server>github</server>
                <noJekyll>true</noJekyll>
                <dryRun>false</dryRun>
            </configuration>
            <executions>
                <execution>
                    <goals>
                        <goal>site</goal>
                    </goals>
                    <phase>site-deploy</phase>
                </execution>
            </executions>
        </plugin>

    </plugins>
  </build>

    <reporting>
        <plugins>
            <!-- enable plugin for generating scaladoc -->
            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
            </plugin>

            <!-- configure site plugin to not generate too much info (sloooow) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>

                <configuration>
                    <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>summary</report>
                            <!--<report>index</report>-->
                            <!--<report>dependencies</report>-->
                            <!--<report>project-team</report>-->
                            <!--<report>issue-tracking</report>-->
                            <!--<report>scm</report>-->
                            <!--<report>cim</report>-->
                            <!--<report>modules</report>-->
                            <!--<report>plugins</report>-->
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

    <!-- This whole profile setup below is just to execute the run-sample-app.sh conditionally in test phase but not when skipTests is defined -->
    <profiles>
        <profile>
            <id>my-test-plugins</id>

            <activation>
                <!--<property><name>!maven.test.skip</name></property>-->
                <property><name>!skipTests</name></property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <version>1.4.0</version>
                        <executions>
                            <execution>
                                <id>run-sample-app</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>./src/test/scripts/run-sample-app.sh</executable>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
